[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Interface/components/enemy_bar/EnemyBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/platformer_sprites_pixelized (1).png" type="Texture" id=4]
[ext_resource path="res://Entities/Enemies/SpriteEnemy.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.6503, 29.78 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform bool flash = true;
uniform vec4 flash_color: hint_color = vec4(1.0);

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(flash){
		color.rgb = flash_color.rgb;
		//color = vec4((color.r+flash_color.r)/2.0,(color.g+flash_color.g)/2.0,(color.b+flash_color.b)/2.0,color.a);
	}
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/flash = false
shader_param/flash_color = Color( 1, 1, 1, 1 )

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 2147483652
collision_mask = 2147483654
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = -2147483648
position = Vector2( -0.841843, 2.24492 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="raycast_bl" type="RayCast2D" parent="."]
position = Vector2( -17.9958, 1.8856 )
rotation = 3.14159
scale = Vector2( 2.22245, -0.616885 )
enabled = true
collision_mask = 3

[node name="raycast_br" type="RayCast2D" parent="."]
position = Vector2( 16.3945, 2.16993 )
scale = Vector2( -2.22245, 0.616885 )
enabled = true
collision_mask = 3

[node name="raycast_b" type="RayCast2D" parent="."]
position = Vector2( -0.12314, 2.86557 )
scale = Vector2( -2.22245, 0.616885 )
enabled = true

[node name="raycast_attack" type="RayCast2D" parent="."]
position = Vector2( -11.4613, 2.98023e-08 )
rotation = -1.58032
scale = Vector2( 0.9, 0.9 )
enabled = true
collision_mask = 19
collide_with_areas = true

[node name="raycast_damage" type="RayCast2D" parent="."]
position = Vector2( 6.49983, -0.212359 )
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )
collision_mask = 19

[node name="Bar" parent="." instance=ExtResource( 3 )]
margin_left = -20.8902
margin_top = -37.7304
margin_right = 19.1098
margin_bottom = 2.26961

[node name="raycast_sight_front" type="RayCast2D" parent="."]
position = Vector2( -7.37738e-13, -18.5406 )
rotation = -1.5708
scale = Vector2( 1, 10 )
enabled = true
collision_mask = 17

[node name="raycast_sight_back" type="RayCast2D" parent="."]
position = Vector2( -7.37738e-13, -18.5406 )
rotation = 1.5708
scale = Vector2( 1, 4 )
enabled = true
collision_mask = 17

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 4 )
vframes = 9
hframes = 8
frame = 12
script = ExtResource( 5 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
